--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,18 @@
     flex-direction: row;
     align-items: center;
 }
+
+.form-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 20px 10px;
+
+}
+label {
+    padding: 5px 0
+}
+
+input {
+    margin: 5px;
+}
